AC_PREREQ(2.53)

AC_INIT([mate-themes], [1.5.0], [http://www.mate-desktop.org])
AC_CONFIG_SRCDIR([icon-themes])

AM_INIT_AUTOMAKE([1.9 tar-ustar])

# Enable silent build rules by default, requires at least
# Automake-1.11. Disable by either passing --disable-silent-rules to
# configure or passing V=1 to make
m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

PKG_PROG_PKG_CONFIG([0.19])

# Workaround to make aclocal get the right flags
AC_SUBST(ACLOCAL_AMFLAGS, "\${ACLOCAL_FLAGS}")

# Check GTK+ theme engines
PKG_CHECK_MODULES(THEME_ENGINE,
 [gtk+-2.0 >= 2.0.0 dnl
  gdk-pixbuf-2.0 >= 2.0.0 dnl
  gtk-engines-2 >= 2.15.3 ])

GTK_VERSION=`$PKG_CONFIG --variable=gtk_binary_version gtk+-2.0`
AC_SUBST(GTK_VERSION)

# Check if it's a development (odd minor) version (obsolete with date versions)
#AC_MSG_CHECKING([development series build])
#MINOR_VERSION="`echo $PACKAGE_VERSION|cut -d. -f2`"
#if expr $MINOR_VERSION % 2 > /dev/null != "0"; then
   # Development version, disable mapping
   # and enable placeholder by default
#   icon_mapping_policy=no
#   placeholders_policy=yes
#   enable_test_themes=yes
#   AC_MSG_RESULT([yes])
#else
  # Stable version, enable mapping
  # and disable placeholders by default
  icon_mapping_policy=yes
  placeholders_policy=no
#  AC_MSG_RESULT([no])
#fi

# Configure option to force placeholders
AC_ARG_ENABLE([placeholders],
	AC_HELP_STRING([--enable-placeholders],
			[Enable placeholder icons [default=auto]]),
	enable_placeholders=$enableval,
	enable_placeholders=$placeholders_policy)

AM_CONDITIONAL(PLACEHOLDERS, test "x$enable_placeholders" != "xno")

# Configure option to force icon mapping
AC_ARG_ENABLE([icon-mapping],
        AC_HELP_STRING([--enable-icon-mapping],
                        [Enable compatibility symlinks [default=auto]]),
        enable_mapping=$enableval,
        enable_mapping=$icon_mapping_policy)

# Check for icon-naming-utils
ICONMAP="true"
if test "x$enable_mapping" != "xno"; then
   UTILS_REQUIRED=0.8.7

   AC_MSG_CHECKING([icon-naming-utils >= $UTILS_REQUIRED])
   PKG_CHECK_EXISTS(icon-naming-utils >= $UTILS_REQUIRED, have_utils=yes, have_utils=no)
   if test "x$have_utils" = "xyes"; then
      UTILS_PATH="`$PKG_CONFIG --variable=program_path icon-naming-utils`"
      ICONMAP="$UTILS_PATH/icon-name-mapping"
      AC_MSG_RESULT([yes])
   else
	AC_MSG_RESULT([no])
   	AC_MSG_ERROR([icon-naming-utils >= $UTILS_REQUIRED is required to build and install mate-themes])
   fi
fi
AC_SUBST(ICONMAP)
AM_CONDITIONAL(LEGACY_ICON_MAPPING, test "x$enable_mapping" != "xno")

dnl ***************************************************************************
dnl *** Adwaita-Cupertino-SL specific checks                                ***
dnl ***************************************************************************
AC_ARG_ENABLE([Adwaita-Cupertino-SL],
    AC_HELP_STRING([--enable-Adwaita-Cupertino-SL], [Install the Adwaita-Cupertino-SL desktop theme.]),
    enable_adwaita_cupertino_sl=$enableval,
    enable_adwaita_cupertino_sl=no)
AM_CONDITIONAL(BUILD_ADWAITA_CUPERTINO_SL, test "x$enable_adwaita_cupertino_sl" = "xyes")

dnl ***************************************************************************
dnl *** AmbianceBlue specific checks                                		***
dnl ***************************************************************************
AC_ARG_ENABLE([AmbianceBlue],
    AC_HELP_STRING([--enable-AmbianceBlue], [Install the AmbianceBlue desktop theme.]),
    enable_ambianceblue=$enableval,
    enable_ambianceblue=no)
AM_CONDITIONAL(BUILD_AMBIANCEBLUE, test "x$enable_ambianceblue" = "xyes")

dnl ***************************************************************************
dnl *** Ambiance-Xfce-LXDE-MATE specific checks                             ***
dnl ***************************************************************************
AC_ARG_ENABLE([Ambiance-Xfce-LXDE-MATE],
    AC_HELP_STRING([--enable-Ambiance-Xfce-LXDE-MATE], [Install the Ambiance-Xfce-LXDE-MATE desktop theme.]),
    enable_ambiance_xfce_lxde_mate=$enableval,
    enable_ambiance_xfce_lxde_mate=no)
AM_CONDITIONAL(BUILD_AMBIANCE_XFCE_LXDE_MATE, test "x$enable_ambiance_xfce_lxde_mate" = "xyes")

dnl ***************************************************************************
dnl *** Cologne specific checks                           		    		***
dnl ***************************************************************************
AC_ARG_ENABLE([Cologne],
    AC_HELP_STRING([--enable-Cologne], [Install the Cologne desktop theme.]),
    enable_cologne=$enableval,
    enable_cologne=no)
AM_CONDITIONAL(BUILD_COLOGNE, test "x$enable_cologne" = "xyes")

dnl ***************************************************************************
dnl *** drakfire-dream-black checks											***
dnl ***************************************************************************
AC_ARG_ENABLE([drakfire-dream-black],
    AC_HELP_STRING([--enable-drakfire-dream-black], [Install the drakfire-dream-black desktop theme.]),
    enable_drakfire_dream_black=$enableval,
    enable_drakfire_dream_black=no)
AM_CONDITIONAL(BUILD_DRAKFIRE_DREAM_BLACK, test "x$enable_drakfire_dream_black" = "xyes")

dnl ***************************************************************************
dnl *** GnomishDark checks													***
dnl ***************************************************************************
AC_ARG_ENABLE([GnomishDark],
    AC_HELP_STRING([--enable-GnomishDark], [Install the GnomishDark desktop theme.]),
    enable_gnomishdark=$enableval,
    enable_gnomishdark=no)
AM_CONDITIONAL(BUILD_GNOMISHDARK, test "x$enable_gnomishdark" = "xyes")

dnl ***************************************************************************
dnl *** RadianceBlue checks													***
dnl ***************************************************************************
AC_ARG_ENABLE([RadianceBlue],
    AC_HELP_STRING([--enable-RadianceBlue], [Install the RadianceBlue desktop theme.]),
    enable_radianceblue=$enableval,
    enable_radianceblue=no)
AM_CONDITIONAL(BUILD_RADIANCEBLUE, test "x$enable_radianceblue" = "xyes")

dnl ***************************************************************************
dnl *** Radiance-Xfce-LXDE-MATE checks										***
dnl ***************************************************************************
AC_ARG_ENABLE([Radiance-Xfce-LXDE-MATE],
    AC_HELP_STRING([--enable-Radiance-Xfce-LXDE-MATE], [Install the Radiance-Xfce-LXDE-MATE desktop theme.]),
    enable_radiance_xfce_lxde_mate=$enableval,
    enable_radiance_xfce_lxde_mate=no)
AM_CONDITIONAL(BUILD_RADIANCE_XFCE_LXDE_MATE, test "x$enable_radiance_xfce_lxde_mate" = "xyes")

dnl ***************************************************************************
dnl *** Smoothly checks							    ***
dnl ***************************************************************************
AC_ARG_ENABLE([Smoothly],
    AC_HELP_STRING([--enable-Smoothly], [Install the Smoothly desktop theme.]),
    enable_smootly=$enableval,
    enable_smootly=no)
AM_CONDITIONAL(BUILD_SMOOTLY, test "x$enable_smootly" = "xyes")

dnl ***************************************************************************
dnl *** Smoothly-Black checks							    ***
dnl ***************************************************************************
AC_ARG_ENABLE([Smoothly-Black],
    AC_HELP_STRING([--enable-Smoothly-Black], [Install the Smoothly-Black desktop theme.]),
    enable_smootly_black=$enableval,
    enable_smootly_black=no)
AM_CONDITIONAL(BUILD_SMOOTLY_BLACK, test "x$enable_smootly_black" = "xyes")

dnl ***************************************************************************
dnl *** Sonar checks														***
dnl ***************************************************************************
AC_ARG_ENABLE([Sonar],
    AC_HELP_STRING([--enable-Sonar], [Install the Sonar desktop theme.]),
    enable_sonar=$enableval,
    enable_sonar=no)
AM_CONDITIONAL(BUILD_SONAR, test "x$enable_sonar" = "xyes")

dnl ***************************************************************************
dnl *** SonarBlue checks													***
dnl ***************************************************************************
AC_ARG_ENABLE([SonarBlue],
    AC_HELP_STRING([--enable-SonarBlue], [Install the SonarBlue desktop theme.]),
    enable_sonarblue=$enableval,
    enable_sonarblue=no)
AM_CONDITIONAL(BUILD_SONARBLUE, test "x$enable_sonarblue" = "xyes")

dnl ***************************************************************************
dnl *** Zukitwo checks														***
dnl ***************************************************************************
AC_ARG_ENABLE([Zukitwo],
    AC_HELP_STRING([--enable-Zukitwo], [Install the Zukitwo desktop theme.]),
    enable_zukitwo=$enableval,
    enable_zukitwo=no)
AM_CONDITIONAL(BUILD_ZUKITWO, test "x$enable_zukitwo" = "xyes")

dnl ***************************************************************************
dnl *** Zukitwo-Dark checks													***
dnl ***************************************************************************
AC_ARG_ENABLE([Zukitwo-Dark],
    AC_HELP_STRING([--enable-Zukitwo-Dark], [Install the Zukitwo-Dark desktop theme.]),
    enable_zukitwo_dark=$enableval,
    enable_zukitwo_dark=no)
AM_CONDITIONAL(BUILD_ZUKITWO_DARK, test "x$enable_zukitwo_dark" = "xyes")

dnl ***************************************************************************
dnl *** Zukitwo-Dust checks													***
dnl ***************************************************************************
AC_ARG_ENABLE([Zukitwo-Dust],
    AC_HELP_STRING([--enable-Zukitwo-Dust], [Install the Zukitwo-Dust desktop theme.]),
    enable_zukitwo_dust=$enableval,
    enable_zukitwo_dust=no)
AM_CONDITIONAL(BUILD_ZUKITWO_DUST, test "x$enable_zukitwo_dust" = "xyes")

dnl ***************************************************************************
dnl *** Zukitwo-Brave checks												***
dnl ***************************************************************************
AC_ARG_ENABLE([Zukitwo-Brave],
    AC_HELP_STRING([--enable-Zukitwo-Brave], [Install the Zukitwo-Brave desktop theme.]),
    enable_zukitwo_brave=$enableval,
    enable_zukitwo_brave=no)
AM_CONDITIONAL(BUILD_ZUKITWO_BRAVE, test "x$enable_zukitwo_brave" = "xyes")

dnl ***************************************************************************
dnl *** Zukitwo-Human checks												***
dnl ***************************************************************************
AC_ARG_ENABLE([Zukitwo-Human],
    AC_HELP_STRING([--enable-Zukitwo-Human], [Install the Zukitwo-Human desktop theme.]),
    enable_zukitwo_human=$enableval,
    enable_zukitwo_human=no)
AM_CONDITIONAL(BUILD_ZUKITWO_HUMAN, test "x$enable_zukitwo_human" = "xyes")

dnl ***************************************************************************
dnl *** Zukitwo-Illustrious checks											***
dnl ***************************************************************************
AC_ARG_ENABLE([Zukitwo-Illustrious],
    AC_HELP_STRING([--enable-Zukitwo-Illustrious], [Install the Zukitwo-Illustrious desktop theme.]),
    enable_zukitwo_illustrious=$enableval,
    enable_zukitwo_illustrious=no)
AM_CONDITIONAL(BUILD_ZUKITWO_ILLUSTRIOUS, test "x$enable_zukitwo_illustrious" = "xyes")

dnl ***************************************************************************
dnl *** Zukitwo-Noble checks												***
dnl ***************************************************************************
AC_ARG_ENABLE([Zukitwo-Noble],
    AC_HELP_STRING([--enable-Zukitwo-Noble], [Install the Zukitwo-Noble desktop theme.]),
    enable_zukitwo_noble=$enableval,
    enable_zukitwo_noble=no)
AM_CONDITIONAL(BUILD_ZUKITWO_NOBLE, test "x$enable_zukitwo_noble" = "xyes")

dnl ***************************************************************************
dnl *** Zukitwo-Wine checks												***
dnl ***************************************************************************
AC_ARG_ENABLE([Zukitwo-Wine],
    AC_HELP_STRING([--enable-Zukitwo-Wine], [Install the Zukitwo-Wine desktop theme.]),
    enable_zukitwo_wine=$enableval,
    enable_zukitwo_wine=no)
AM_CONDITIONAL(BUILD_ZUKITWO_WINE, test "x$enable_zukitwo_wine" = "xyes")

dnl ***************************************************************************
dnl *** Zukitwo-Wise checks												***
dnl ***************************************************************************
AC_ARG_ENABLE([Zukitwo-Wise],
    AC_HELP_STRING([--enable-Zukitwo-Wise], [Install the Zukitwo-Wise desktop theme.]),
    enable_zukitwo_wise=$enableval,
    enable_zukitwo_wise=no)
AM_CONDITIONAL(BUILD_ZUKITWO_WISE, test "x$enable_zukitwo_wise" = "xyes")


dnl ***************************************************************************
dnl *** Zukitwo-Colors checks												***
dnl ***************************************************************************
AC_ARG_ENABLE([Zukitwo-Colors],
    AC_HELP_STRING([--enable-Zukitwo-Colors], [Install the Zukitwo-Colors desktop theme.]),
    enable_zukitwo_colors=$enableval,
    enable_zukitwo_colors=no)
AM_CONDITIONAL(BUILD_ZUKITWO_COLORS, test "x$enable_zukitwo_colors" = "xyes")

dnl ***************************************************************************
dnl *** Sonar-Icons checks													***
dnl ***************************************************************************
AC_ARG_ENABLE([Sonar-Icons],
    AC_HELP_STRING([--enable-Sonar-Icons], [Install the Sonar icon theme.]),
    enable_sonar_icons=$enableval,
    enable_sonar_icons=no)
AM_CONDITIONAL(BUILD_SONAR_ICONS, test "x$enable_sonar_icons" = "xyes")



AC_CONFIG_FILES([
Makefile
desktop-themes/Makefile
desktop-themes/Adwaita-Cupertino-SL/Makefile
desktop-themes/Adwaita-Cupertino-SL/gtk-2.0/Makefile
desktop-themes/Adwaita-Cupertino-SL/gtk-2.0/assets/Makefile
desktop-themes/Adwaita-Cupertino-SL/gtk-3.0/Makefile
desktop-themes/Adwaita-Cupertino-SL/gtk-3.0/assets/Makefile
desktop-themes/Adwaita-Cupertino-SL/metacity-1/Makefile
desktop-themes/Adwaita-Cupertino-SL/unity/Makefile
desktop-themes/AmbianceBlue/Makefile
desktop-themes/AmbianceBlue/gtk-2.0/Makefile
desktop-themes/AmbianceBlue/gtk-2.0/apps/Makefile
desktop-themes/AmbianceBlue/gtk-2.0/apps/img/Makefile
desktop-themes/AmbianceBlue/gtk-3.0/Makefile
desktop-themes/AmbianceBlue/gtk-3.0/assets/Makefile
desktop-themes/AmbianceBlue/gtk-3.0/apps/Makefile
desktop-themes/AmbianceBlue/metacity-1/Makefile
desktop-themes/AmbianceBlue/gnome-shell/Makefile
desktop-themes/AmbianceBlue/unity/Makefile
desktop-themes/Ambiance-Xfce-LXDE-MATE/Makefile
desktop-themes/Ambiance-Xfce-LXDE-MATE/gtk-2.0/Makefile
desktop-themes/Ambiance-Xfce-LXDE-MATE/gtk-2.0/apps/Makefile
desktop-themes/Ambiance-Xfce-LXDE-MATE/gtk-2.0/apps/img/Makefile
desktop-themes/Ambiance-Xfce-LXDE-MATE/gtk-3.0/Makefile
desktop-themes/Ambiance-Xfce-LXDE-MATE/gtk-3.0/assets/Makefile
desktop-themes/Ambiance-Xfce-LXDE-MATE/gtk-3.0/apps/Makefile
desktop-themes/Ambiance-Xfce-LXDE-MATE/metacity-1/Makefile
desktop-themes/Ambiance-Xfce-LXDE-MATE/Docs/Makefile
desktop-themes/Ambiance-Xfce-LXDE-MATE/openbox-3/Makefile
desktop-themes/Ambiance-Xfce-LXDE-MATE/unity/Makefile
desktop-themes/Ambiance-Xfce-LXDE-MATE/xfwm4/Makefile
desktop-themes/Cologne/Makefile
desktop-themes/Cologne/gtk-2.0/Makefile
desktop-themes/Cologne/gtk-2.0/Styles/Makefile
desktop-themes/Cologne/gtk-3.0/Makefile
desktop-themes/Cologne/metacity-1/Makefile
desktop-themes/drakfire-dream-black/Makefile
desktop-themes/drakfire-dream-black/gtk-2.0/Makefile
desktop-themes/drakfire-dream-black/gtk-2.0/apps/Makefile
desktop-themes/drakfire-dream-black/gtk-2.0/apps/Handles/Makefile
desktop-themes/drakfire-dream-black/gtk-2.0/apps/Nautilus/Makefile
desktop-themes/drakfire-dream-black/gtk-2.0/apps/Null/Makefile
desktop-themes/drakfire-dream-black/gtk-2.0/apps/Others/Makefile
desktop-themes/drakfire-dream-black/gtk-2.0/image/Makefile
desktop-themes/drakfire-dream-black/gtk-2.0/widgets/Makefile
desktop-themes/drakfire-dream-black/gtk-2.0/widgets/Null/Makefile
desktop-themes/drakfire-dream-black/gtk-2.0/widgets/Others/Makefile
desktop-themes/drakfire-dream-black/gtk-2.0/widgets/Panel/Makefile
desktop-themes/drakfire-dream-black/gtk-3.0/Makefile
desktop-themes/drakfire-dream-black/gtk-3.0/assets/Makefile
desktop-themes/drakfire-dream-black/gtk-3.0/buttons/Makefile
desktop-themes/drakfire-dream-black/metacity-1/Makefile
desktop-themes/drakfire-dream-black/gnome-shell/Makefile
desktop-themes/GnomishDark/Makefile
desktop-themes/GnomishDark/gtk-2.0/Makefile
desktop-themes/GnomishDark/gtk-2.0/assets/Makefile
desktop-themes/GnomishDark/gtk-2.0/Styles/Makefile
desktop-themes/GnomishDark/gtk-3.0/Makefile
desktop-themes/GnomishDark/gtk-3.0/assets/Makefile
desktop-themes/GnomishDark/metacity-1/Makefile
desktop-themes/GnomishDark/gnome-shell/Makefile
desktop-themes/RadianceBlue/Makefile
desktop-themes/RadianceBlue/gtk-2.0/Makefile
desktop-themes/RadianceBlue/gtk-2.0/apps/Makefile
desktop-themes/RadianceBlue/gtk-2.0/apps/img/Makefile
desktop-themes/RadianceBlue/gtk-3.0/Makefile
desktop-themes/RadianceBlue/gtk-3.0/assets/Makefile
desktop-themes/RadianceBlue/gtk-3.0/apps/Makefile
desktop-themes/RadianceBlue/metacity-1/Makefile
desktop-themes/RadianceBlue/gnome-shell/Makefile
desktop-themes/RadianceBlue/unity/Makefile
desktop-themes/Radiance-Xfce-LXDE-MATE/Makefile
desktop-themes/Radiance-Xfce-LXDE-MATE/gtk-2.0/Makefile
desktop-themes/Radiance-Xfce-LXDE-MATE/gtk-2.0/apps/Makefile
desktop-themes/Radiance-Xfce-LXDE-MATE/gtk-2.0/apps/img/Makefile
desktop-themes/Radiance-Xfce-LXDE-MATE/gtk-3.0/Makefile
desktop-themes/Radiance-Xfce-LXDE-MATE/gtk-3.0/assets/Makefile
desktop-themes/Radiance-Xfce-LXDE-MATE/gtk-3.0/apps/Makefile
desktop-themes/Radiance-Xfce-LXDE-MATE/Docs/Makefile
desktop-themes/Radiance-Xfce-LXDE-MATE/metacity-1/Makefile
desktop-themes/Radiance-Xfce-LXDE-MATE/openbox-3/Makefile
desktop-themes/Radiance-Xfce-LXDE-MATE/unity/Makefile
desktop-themes/Radiance-Xfce-LXDE-MATE/xfwm4/Makefile
desktop-themes/Smoothly/Makefile
desktop-themes/Smoothly/gtk-2.0/Makefile
desktop-themes/Smoothly/gtk-2.0/assets/Makefile
desktop-themes/Smoothly/gtk-3.0/Makefile
desktop-themes/Smoothly/gtk-3.0/assets/Makefile
desktop-themes/Smoothly/metacity-1/Makefile
desktop-themes/Smoothly-Black/Makefile
desktop-themes/Smoothly-Black/gtk-2.0/Makefile
desktop-themes/Smoothly-Black/gtk-2.0/assets/Makefile
desktop-themes/Smoothly-Black/gtk-3.0/Makefile
desktop-themes/Smoothly-Black/metacity-1/Makefile
desktop-themes/Sonar/Makefile
desktop-themes/Sonar/gtk-2.0/Makefile
desktop-themes/Sonar/gtk-3.0/Makefile
desktop-themes/Sonar/gtk-3.0/assets/Makefile
desktop-themes/Sonar/metacity-1/Makefile
desktop-themes/Sonar/mozilla/Makefile
desktop-themes/SonarBlue/Makefile
desktop-themes/SonarBlue/gtk-2.0/Makefile
desktop-themes/SonarBlue/gtk-3.0/Makefile
desktop-themes/SonarBlue/gtk-3.0/assets/Makefile
desktop-themes/SonarBlue/metacity-1/Makefile
desktop-themes/SonarBlue/mozilla/Makefile
desktop-themes/Zukitwo/Makefile
desktop-themes/Zukitwo/gtk-2.0/Makefile
desktop-themes/Zukitwo/gtk-2.0/apps/Makefile
desktop-themes/Zukitwo/gtk-2.0/apps/Handles/Makefile
desktop-themes/Zukitwo/gtk-2.0/apps/Nautilus/Makefile
desktop-themes/Zukitwo/gtk-2.0/apps/Null/Makefile
desktop-themes/Zukitwo/gtk-2.0/apps/Others/Makefile
desktop-themes/Zukitwo/gtk-2.0/widgets/Makefile
desktop-themes/Zukitwo/gtk-2.0/widgets/Null/Makefile
desktop-themes/Zukitwo/gtk-2.0/widgets/Others/Makefile
desktop-themes/Zukitwo/gtk-2.0/widgets/Panel/Makefile
desktop-themes/Zukitwo/gtk-3.0/Makefile
desktop-themes/Zukitwo/gtk-3.0/apps/Makefile
desktop-themes/Zukitwo/gnome-shell/Makefile
desktop-themes/Zukitwo/metacity-1/Makefile
desktop-themes/Zukitwo/unity/Makefile
desktop-themes/Zukitwo/xfwm4/Makefile
desktop-themes/Zukitwo-Dark/Makefile
desktop-themes/Zukitwo-Dark/gtk-2.0/Makefile
desktop-themes/Zukitwo-Dark/gtk-2.0/apps/Makefile
desktop-themes/Zukitwo-Dark/gtk-2.0/apps/Handles/Makefile
desktop-themes/Zukitwo-Dark/gtk-2.0/apps/Nautilus/Makefile
desktop-themes/Zukitwo-Dark/gtk-2.0/apps/Null/Makefile
desktop-themes/Zukitwo-Dark/gtk-2.0/apps/Others/Makefile
desktop-themes/Zukitwo-Dark/gtk-2.0/widgets/Makefile
desktop-themes/Zukitwo-Dark/gtk-2.0/widgets/Null/Makefile
desktop-themes/Zukitwo-Dark/gtk-2.0/widgets/Others/Makefile
desktop-themes/Zukitwo-Dark/gtk-2.0/widgets/Panel/Makefile
desktop-themes/Zukitwo-Dark/gtk-3.0/Makefile
desktop-themes/Zukitwo-Dark/gtk-3.0/apps/Makefile
desktop-themes/Zukitwo-Dark/metacity-1/Makefile
desktop-themes/Zukitwo-Dark/gnome-shell/Makefile
desktop-themes/Zukitwo-Dark/unity/Makefile
desktop-themes/Zukitwo-Dark/xfwm4/Makefile
desktop-themes/Zukitwo-Dust/Makefile
desktop-themes/Zukitwo-Dust/cinnamon/Makefile
desktop-themes/Zukitwo-Dust/gnome-shell/Makefile
desktop-themes/Zukitwo-Dust/unity/Makefile
desktop-themes/Zukitwo-Dust/xfwm4/Makefile
desktop-themes/Zukitwo-Dust/gtk-2.0/Makefile
desktop-themes/Zukitwo-Dust/gtk-2.0/apps/Makefile
desktop-themes/Zukitwo-Dust/gtk-2.0/apps/Caja/Makefile
desktop-themes/Zukitwo-Dust/gtk-2.0/apps/Handles/Makefile
desktop-themes/Zukitwo-Dust/gtk-2.0/apps/Null/Makefile
desktop-themes/Zukitwo-Dust/gtk-2.0/apps/Others/Makefile
desktop-themes/Zukitwo-Dust/gtk-2.0/widgets/Makefile
desktop-themes/Zukitwo-Dust/gtk-2.0/widgets/Null/Makefile
desktop-themes/Zukitwo-Dust/gtk-2.0/widgets/Others/Makefile
desktop-themes/Zukitwo-Dust/gtk-2.0/widgets/Panel/Makefile
desktop-themes/Zukitwo-Dust/gtk-3.0/Makefile
desktop-themes/Zukitwo-Dust/gtk-3.0/apps/Makefile
desktop-themes/Zukitwo-Dust/metacity-1/Makefile
desktop-themes/Zukitwo-Brave/Makefile
desktop-themes/Zukitwo-Brave/cinnamon/Makefile
desktop-themes/Zukitwo-Brave/gnome-shell/Makefile
desktop-themes/Zukitwo-Brave/unity/Makefile
desktop-themes/Zukitwo-Brave/gtk-2.0/Makefile
desktop-themes/Zukitwo-Brave/gtk-2.0/apps/Makefile
desktop-themes/Zukitwo-Brave/gtk-2.0/apps/Caja/Makefile
desktop-themes/Zukitwo-Brave/gtk-2.0/apps/Handles/Makefile
desktop-themes/Zukitwo-Brave/gtk-2.0/apps/Null/Makefile
desktop-themes/Zukitwo-Brave/gtk-2.0/apps/Others/Makefile
desktop-themes/Zukitwo-Brave/gtk-2.0/widgets/Makefile
desktop-themes/Zukitwo-Brave/gtk-2.0/widgets/Null/Makefile
desktop-themes/Zukitwo-Brave/gtk-2.0/widgets/Others/Makefile
desktop-themes/Zukitwo-Brave/gtk-2.0/widgets/Panel/Makefile
desktop-themes/Zukitwo-Brave/gtk-3.0/Makefile
desktop-themes/Zukitwo-Brave/gtk-3.0/apps/Makefile
desktop-themes/Zukitwo-Human/Makefile
desktop-themes/Zukitwo-Human/cinnamon/Makefile
desktop-themes/Zukitwo-Human/gnome-shell/Makefile
desktop-themes/Zukitwo-Human/unity/Makefile
desktop-themes/Zukitwo-Human/gtk-2.0/Makefile
desktop-themes/Zukitwo-Human/gtk-2.0/apps/Makefile
desktop-themes/Zukitwo-Human/gtk-2.0/apps/Caja/Makefile
desktop-themes/Zukitwo-Human/gtk-2.0/apps/Handles/Makefile
desktop-themes/Zukitwo-Human/gtk-2.0/apps/Null/Makefile
desktop-themes/Zukitwo-Human/gtk-2.0/apps/Others/Makefile
desktop-themes/Zukitwo-Human/gtk-2.0/widgets/Makefile
desktop-themes/Zukitwo-Human/gtk-2.0/widgets/Null/Makefile
desktop-themes/Zukitwo-Human/gtk-2.0/widgets/Others/Makefile
desktop-themes/Zukitwo-Human/gtk-2.0/widgets/Panel/Makefile
desktop-themes/Zukitwo-Human/gtk-3.0/Makefile
desktop-themes/Zukitwo-Human/gtk-3.0/apps/Makefile
desktop-themes/Zukitwo-Illustrious/Makefile
desktop-themes/Zukitwo-Illustrious/cinnamon/Makefile
desktop-themes/Zukitwo-Illustrious/gnome-shell/Makefile
desktop-themes/Zukitwo-Illustrious/unity/Makefile
desktop-themes/Zukitwo-Illustrious/gtk-2.0/Makefile
desktop-themes/Zukitwo-Illustrious/gtk-2.0/apps/Makefile
desktop-themes/Zukitwo-Illustrious/gtk-2.0/apps/Caja/Makefile
desktop-themes/Zukitwo-Illustrious/gtk-2.0/apps/Handles/Makefile
desktop-themes/Zukitwo-Illustrious/gtk-2.0/apps/Null/Makefile
desktop-themes/Zukitwo-Illustrious/gtk-2.0/apps/Others/Makefile
desktop-themes/Zukitwo-Illustrious/gtk-2.0/widgets/Makefile
desktop-themes/Zukitwo-Illustrious/gtk-2.0/widgets/Null/Makefile
desktop-themes/Zukitwo-Illustrious/gtk-2.0/widgets/Others/Makefile
desktop-themes/Zukitwo-Illustrious/gtk-2.0/widgets/Panel/Makefile
desktop-themes/Zukitwo-Illustrious/gtk-3.0/Makefile
desktop-themes/Zukitwo-Illustrious/gtk-3.0/apps/Makefile
desktop-themes/Zukitwo-Noble/Makefile
desktop-themes/Zukitwo-Noble/cinnamon/Makefile
desktop-themes/Zukitwo-Noble/gnome-shell/Makefile
desktop-themes/Zukitwo-Noble/unity/Makefile
desktop-themes/Zukitwo-Noble/gtk-2.0/Makefile
desktop-themes/Zukitwo-Noble/gtk-2.0/apps/Makefile
desktop-themes/Zukitwo-Noble/gtk-2.0/apps/Caja/Makefile
desktop-themes/Zukitwo-Noble/gtk-2.0/apps/Handles/Makefile
desktop-themes/Zukitwo-Noble/gtk-2.0/apps/Null/Makefile
desktop-themes/Zukitwo-Noble/gtk-2.0/apps/Others/Makefile
desktop-themes/Zukitwo-Noble/gtk-2.0/widgets/Makefile
desktop-themes/Zukitwo-Noble/gtk-2.0/widgets/Null/Makefile
desktop-themes/Zukitwo-Noble/gtk-2.0/widgets/Others/Makefile
desktop-themes/Zukitwo-Noble/gtk-2.0/widgets/Panel/Makefile
desktop-themes/Zukitwo-Noble/gtk-3.0/Makefile
desktop-themes/Zukitwo-Noble/gtk-3.0/apps/Makefile
desktop-themes/Zukitwo-Wine/Makefile
desktop-themes/Zukitwo-Wine/cinnamon/Makefile
desktop-themes/Zukitwo-Wine/gnome-shell/Makefile
desktop-themes/Zukitwo-Wine/unity/Makefile
desktop-themes/Zukitwo-Wine/gtk-2.0/Makefile
desktop-themes/Zukitwo-Wine/gtk-2.0/apps/Makefile
desktop-themes/Zukitwo-Wine/gtk-2.0/apps/Caja/Makefile
desktop-themes/Zukitwo-Wine/gtk-2.0/apps/Handles/Makefile
desktop-themes/Zukitwo-Wine/gtk-2.0/apps/Null/Makefile
desktop-themes/Zukitwo-Wine/gtk-2.0/apps/Others/Makefile
desktop-themes/Zukitwo-Wine/gtk-2.0/widgets/Makefile
desktop-themes/Zukitwo-Wine/gtk-2.0/widgets/Null/Makefile
desktop-themes/Zukitwo-Wine/gtk-2.0/widgets/Others/Makefile
desktop-themes/Zukitwo-Wine/gtk-2.0/widgets/Panel/Makefile
desktop-themes/Zukitwo-Wine/gtk-3.0/Makefile
desktop-themes/Zukitwo-Wine/gtk-3.0/apps/Makefile
desktop-themes/Zukitwo-Wise/Makefile
desktop-themes/Zukitwo-Wise/cinnamon/Makefile
desktop-themes/Zukitwo-Wise/gnome-shell/Makefile
desktop-themes/Zukitwo-Wise/unity/Makefile
desktop-themes/Zukitwo-Wise/gtk-2.0/Makefile
desktop-themes/Zukitwo-Wise/gtk-2.0/apps/Makefile
desktop-themes/Zukitwo-Wise/gtk-2.0/apps/Caja/Makefile
desktop-themes/Zukitwo-Wise/gtk-2.0/apps/Handles/Makefile
desktop-themes/Zukitwo-Wise/gtk-2.0/apps/Null/Makefile
desktop-themes/Zukitwo-Wise/gtk-2.0/apps/Others/Makefile
desktop-themes/Zukitwo-Wise/gtk-2.0/widgets/Makefile
desktop-themes/Zukitwo-Wise/gtk-2.0/widgets/Null/Makefile
desktop-themes/Zukitwo-Wise/gtk-2.0/widgets/Others/Makefile
desktop-themes/Zukitwo-Wise/gtk-2.0/widgets/Panel/Makefile
desktop-themes/Zukitwo-Wise/gtk-3.0/Makefile
desktop-themes/Zukitwo-Wise/gtk-3.0/apps/Makefile
desktop-themes/Zukitwo-Colors/Makefile
desktop-themes/Zukitwo-Colors/cinnamon/Makefile
desktop-themes/Zukitwo-Colors/gnome-shell/Makefile
desktop-themes/Zukitwo-Colors/metacity-1/Makefile
desktop-themes/Zukitwo-Colors/xfwm4/Makefile
icon-themes/Makefile
icon-themes/Sonar/Makefile
icon-themes/Sonar/16x16/Makefile
icon-themes/Sonar/16x16/actions/Makefile
icon-themes/Sonar/16x16/apps/Makefile
icon-themes/Sonar/16x16/categories/Makefile
icon-themes/Sonar/16x16/devices/Makefile
icon-themes/Sonar/16x16/places/Makefile
icon-themes/Sonar/16x16/status/Makefile
icon-themes/Sonar/22x22/Makefile
icon-themes/Sonar/22x22/actions/Makefile
icon-themes/Sonar/22x22/apps/Makefile
icon-themes/Sonar/22x22/categories/Makefile
icon-themes/Sonar/22x22/devices/Makefile
icon-themes/Sonar/22x22/places/Makefile
icon-themes/Sonar/22x22/status/Makefile
icon-themes/Sonar/24x24/Makefile
icon-themes/Sonar/24x24/actions/Makefile
icon-themes/Sonar/24x24/apps/Makefile
icon-themes/Sonar/24x24/categories/Makefile
icon-themes/Sonar/24x24/devices/Makefile
icon-themes/Sonar/24x24/places/Makefile
icon-themes/Sonar/24x24/status/Makefile
icon-themes/Sonar/32x32/Makefile
icon-themes/Sonar/32x32/actions/Makefile
icon-themes/Sonar/32x32/apps/Makefile
icon-themes/Sonar/32x32/categories/Makefile
icon-themes/Sonar/32x32/devices/Makefile
icon-themes/Sonar/32x32/places/Makefile
icon-themes/Sonar/32x32/status/Makefile
icon-themes/Sonar/48x48/Makefile
icon-themes/Sonar/48x48/actions/Makefile
icon-themes/Sonar/48x48/apps/Makefile
icon-themes/Sonar/48x48/categories/Makefile
icon-themes/Sonar/48x48/devices/Makefile
icon-themes/Sonar/48x48/places/Makefile
icon-themes/Sonar/48x48/status/Makefile
icon-themes/Sonar/256x256/Makefile
icon-themes/Sonar/256x256/actions/Makefile
icon-themes/Sonar/256x256/apps/Makefile
icon-themes/Sonar/256x256/categories/Makefile
icon-themes/Sonar/256x256/devices/Makefile
icon-themes/Sonar/256x256/places/Makefile
icon-themes/Sonar/256x256/status/Makefile


])

AC_OUTPUT

dnl ==========================================================================
echo "
	mate-themes-extras-$VERSION:

	Installation prefix:                        ${prefix}

	Building desktop themes:
		Install Adwaita-Cupertino-SL:       ${enable_adwaita_cupertino_sl}
		Install AmbianceBlue:               ${enable_ambianceblue}
		Install Ambiance-Xfce-LXDE-MATE:    ${enable_ambiance_xfce_lxde_mate}
		Install Cologne:                    ${enable_cologne}
		Install drakfire-dream-black:       ${enable_drakfire_dream_black}
		Install GnomishDark:                ${enable_gnomishdark}
		Install RadianceBlue:               ${enable_radianceblue}
		Install Radiance-Xfce-LXDE-MATE:    ${enable_radiance_xfce_lxde_mate}
		Install Sonar:                      ${enable_sonar}
		Install SonarBlue:                  ${enable_sonarblue}
		Install Zukitwo:                    ${enable_zukitwo}
		Install Zukitwo-Dark:               ${enable_zukitwo_dark}
		Install Zukitwo-Dust:               ${enable_zukitwo_dust}
		Install Zukitwo-Brave:              ${enable_zukitwo_brave}
		Install Zukitwo-Human:              ${enable_zukitwo_human}
		Install Zukitwo-Illustrious:        ${enable_zukitwo_illustrious}
		Install Zukitwo-Noble:              ${enable_zukitwo_noble}
		Install Zukitwo-Wine:               ${enable_zukitwo_wine}
		Install Zukitwo-Wise:               ${enable_zukitwo_wise}
		Install Zukitwo-Colors:             ${enable_zukitwo_colors}
	Building icon themes:
		Install Sonar-Icons:                ${enable_sonar_icons}

	configuration successfully :)  now type make
"
