if BUILD_BLUE_SUBMARINE
blue_submarine_SUBDIR = Blue-Submarine
endif

if BUILD_CLEARLOOKS_PHENIX
clearlooks_phenix_SUBDIR = clearlooks-phenix
endif

if BUILD_DELOREAN_DARK
delorean_dark_SUBDIR = DeLorean-Dark
endif

if BUILD_FAIENCE
faience_SUBDIR = Faience
endif

if BUILD_FAIENCE_OCRE
faience_ocre_SUBDIR = Faience-Ocre
endif

if BUILD_GNOME_CUPERTINO
gnome_cupertino_SUBDIR = Gnome-Cupertino
endif

if BUILD_GNOME_CUPERTINO_MINT
gnome_cupertino_mint_SUBDIR = Gnome-Cupertino-Mint
endif

if BUILD_GNOMISHBEIGE
gnomishbeige_SUBDIR = GnomishBeige
endif

if BUILD_GREEN_SUBMARINE
green_submarine_SUBDIR = Green-Submarine
endif

if BUILD_SMOOTLY
smootly_SUBDIR = Smoothly
endif

if BUILD_SMOOTLY_BLACK
smootly_black_SUBDIR = Smoothly-Black
endif

if BUILD_ZUKITWO
zukitwo_SUBDIR = Zukitwo
endif

SUBDIRS = \
	$(blue_submarine_SUBDIR) \
	$(clearlooks_phenix_SUBDIR) \
	$(delorean_dark_SUBDIR) \
	$(faience_SUBDIR) \
	$(faience_ocre_SUBDIR) \
	$(gnome_cupertino_SUBDIR) \
	$(gnome_cupertino_mint_SUBDIR) \
	$(gnomishbeige_SUBDIR) \
	$(green_submarine_SUBDIR) \
	$(smootly_SUBDIR) \
	$(smootly_black_SUBDIR) \
	$(zukitwo_SUBDIR)

DIST_SUBDIRS = \
	Blue-Submarine \
	clearlooks-phenix \
	DeLorean-Dark \
	Faience \
	Faience-Ocre \
	Gnome-Cupertino \
	Gnome-Cupertino-Mint \
	GnomishBeige \
	Green-Submarine \
	Smoothly \
	Smoothly-Black \
	Zukitwo

