if BUILD_BLUE_SUBMARINE
blue_submarine_SUBDIR = Blue-Submarine
endif

if BUILD_CLEARLOOKS_PHENIX
clearlooks_phenix_SUBDIR = clearlooks-phenix
endif

if BUILD_DELOREAN_DARK
delorean_dark_SUBDIR = DeLorean-Dark
endif

if BUILD_FAIENCE
faience_SUBDIR = Faience
endif

if BUILD_FAIENCE_OCRE
faience_ocre_SUBDIR = Faience-Ocre
endif

if BUILD_GNOME_CUPERTINO
gnome_cupertino_SUBDIR = Gnome-Cupertino
endif

if BUILD_GNOMISHBEIGE
gnomishbeige_SUBDIR = GnomishBeige
endif

if BUILD_GREEN_SUBMARINE
green_submarine_SUBDIR = Green-Submarine
endif

if BUILD_SMOOTLY
smootly_SUBDIR = Smoothly
endif

if BUILD_SMOOTLY_BLACK
smootly_black_SUBDIR = Smoothly-Black
endif

if BUILD_ZUKITWO
zukitwo_SUBDIR = Zukitwo
endif

if BUILD_ZUKITWO_BRAVE
zukitwo_brave_SUBDIR = Zukitwo-Brave
endif

if BUILD_ZUKITWO_DUST
zukitwo_dust_SUBDIR = Zukitwo-Dust
endif

if BUILD_ZUKITWO_HUMAN
zukitwo_human_SUBDIR = Zukitwo-Human
endif

if BUILD_ZUKITWO_ILLUSTRIOUS
zukitwo_illustrious_SUBDIR = Zukitwo-Illustrious
endif

if BUILD_ZUKITWO_NOBLE
zukitwo_noble_SUBDIR = Zukitwo-Noble
endif

if BUILD_ZUKITWO_WINE
zukitwo_wine_SUBDIR = Zukitwo-Wine
endif

if BUILD_ZUKITWO_WISE
zukitwo_wise_SUBDIR = Zukitwo-Wise
endif

if BUILD_ZUKITWO_COLORS
zukitwo_colors_SUBDIR = Zukitwo-Colors
endif

SUBDIRS = \
	$(blue_submarine_SUBDIR) \
	$(clearlooks_phenix_SUBDIR) \
	$(delorean_dark_SUBDIR) \
	$(faience_SUBDIR) \
	$(faience_ocre_SUBDIR) \
	$(gnome_cupertino_SUBDIR) \
	$(gnomishbeige_SUBDIR) \
	$(green_submarine_SUBDIR) \
	$(smootly_SUBDIR) \
	$(smootly_black_SUBDIR) \
	$(zukitwo_SUBDIR) \
	$(zukitwo_brave_SUBDIR) \
	$(zukitwo_dust_SUBDIR) \
	$(zukitwo_human_SUBDIR) \
	$(zukitwo_illustrious_SUBDIR) \
	$(zukitwo_noble_SUBDIR) \
	$(zukitwo_wine_SUBDIR) \
	$(zukitwo_wise_SUBDIR) \
	$(zukitwo_colors_SUBDIR)



DIST_SUBDIRS = \
	Blue-Submarine \
	clearlooks-phenix \
	DeLorean-Dark \
	Faience \
	Faience-Ocre \
	Gnome-Cupertino \
	GnomishBeige \
	Green-Submarine \
	Smoothly \
	Smoothly-Black \
	Zukitwo \
	Zukitwo-Brave \
	Zukitwo-Dust \
	Zukitwo-Human \
	Zukitwo-Illustrious \
	Zukitwo-Noble \
	Zukitwo-Wine \
	Zukitwo-Wise \
	Zukitwo-Colors

