if BUILD_BLUE_SUBMARINE
blue_submarine_SUBDIR = Blue-Submarine
endif

if BUILD_DELOREAN
delorean_SUBDIR = DeLorean
endif

if BUILD_DELOREAN_DARK
delorean_dark_SUBDIR = DeLorean-Dark
endif

if BUILD_GNOMISHBEIGE
gnomishbeige_SUBDIR = GnomishBeige
endif

if BUILD_GREEN_SUBMARINE
green_submarine_SUBDIR = Green-Submarine
endif

SUBDIRS = \
	$(blue_submarine_SUBDIR) \
	$(delorean_SUBDIR) \
	$(delorean_dark_SUBDIR) \
	$(gnomishbeige_SUBDIR) \
	$(green_submarine_SUBDIR)

DIST_SUBDIRS = \
	Blue-Submarine \
	DeLorean \
	DeLorean-Dark \
	GnomishBeige \
	Green-Submarine

