if BUILD_ZUKITWO_BRAVE
zukitwo_brave_SUBDIR = Zukitwo-Brave
endif

if BUILD_ZUKITWO_HUMAN
zukitwo_human_SUBDIR = Zukitwo-Human
endif

if BUILD_ZUKITWO_ILLUSTRIOUS
zukitwo_illustrious_SUBDIR = Zukitwo-Illustrious
endif

if BUILD_ZUKITWO_NOBLE
zukitwo_noble_SUBDIR = Zukitwo-Noble
endif

if BUILD_ZUKITWO_WINE
zukitwo_wine_SUBDIR = Zukitwo-Wine
endif

if BUILD_ZUKITWO_WISE
zukitwo_wise_SUBDIR = Zukitwo-Wise
endif


SUBDIRS = \
	$(zukitwo_brave_SUBDIR) \
	$(zukitwo_human_SUBDIR) \
	$(zukitwo_illustrious_SUBDIR)	\
	$(zukitwo_noble_SUBDIR) \
	$(zukitwo_wine_SUBDIR) \
	$(zukitwo_wise_SUBDIR)

DIST_SUBDIRS = \
	Zukitwo-Brave \
	Zukitwo-Human \
	Zukitwo-Illustrious	\
	Zukitwo-Noble \
	Zukitwo-Wine \
	Zukitwo-Wise

