THEME_NAME=DeLorean-Dark
 
themedir = $(datadir)/themes/$(THEME_NAME)

theme_DATA = \
	index.theme \
	delorean-google-chrome-dark.crx \
	GPLv3.pdf

EXTRA_DIST = $(theme_DATA)

SUBDIRS =		\
	chrome		\
	cinnamon	\
	gtk-2.0		\
	gtk-3.0		\
	metacity-1	\
	openbox-3	\
	xfce-notify-4.0 \
	xfwm4

DIST_SUBDIRS =	\
	chrome		\
	cinnamon	\
	gtk-2.0		\
	gtk-3.0		\
	metacity-1	\
	openbox-3	\
	xfce-notify-4.0 \
	xfwm4

CLEANFILES = index.theme
