THEME_NAME=DeLorean-Dark
 
themedir = $(datadir)/themes/$(THEME_NAME)

theme_DATA = \
	index.theme \
	delorean-google-chrome-dark.crx \
	GPLv3.pdf

EXTRA_DIST = $(theme_DATA)

SUBDIRS =		\
	cinnamon	\
	firefox		\
	gnome-shell \
	gtk-2.0		\
	gtk-3.0		\
	metacity-1	\
	openbox-3	\
	thunderbird \
	xfce-notify-4.0 \
	xfwm4

DIST_SUBDIRS =		\
	cinnamon	\
	firefox		\
	gnome-shell \
	gtk-2.0		\
	gtk-3.0		\
	metacity-1	\
	openbox-3	\
	thunderbird \
	xfce-notify-4.0 \
	xfwm4

CLEANFILES = index.theme
