THEME_NAME=DeLorean-Dark
 
themedir = $(datadir)/themes/$(THEME_NAME)

theme_DATA = \
	index.theme \
	delorean-google-chrome-dark.crx \
	LICENSE

EXTRA_DIST = $(theme_DATA)

SUBDIRS =		\
	chrome      \
	cinnamon	\
	gnome-shell \
	gtk-2.0		\
	gtk-3.0		\
	metacity-1	\
	openbox-3	\
	Software-Center \
	unity \
	xfwm4

DIST_SUBDIRS =	\
	chrome      \
	cinnamon	\
	gnome-shell \
	gtk-2.0		\
	gtk-3.0		\
	metacity-1	\
	openbox-3	\
	Software-Center \
	unity \
	xfwm4

CLEANFILES = index.theme
