THEME_NAME=DeLorean
 
themedir = $(datadir)/themes/$(THEME_NAME)

theme_DATA = \
	index.theme \
	delorean-google-chrome.crx \
	LICENSE

EXTRA_DIST = $(theme_DATA)

SUBDIRS =		\
	chrome		\
	cinnamon	\
	gnome-shell	\
	gtk-2.0		\
	gtk-3.0		\
	metacity-1	\
	openbox-3	\
	xfwm4

DIST_SUBDIRS =	\
	chrome		\
	cinnamon	\
	gnome-shell	\
	gtk-2.0		\
	gtk-3.0		\
	metacity-1	\
	openbox-3	\
	xfwm4

CLEANFILES = index.theme
