THEME_NAME=Radiance-Xfce-LXDE-MATE
 
themedir = $(datadir)/themes/$(THEME_NAME)

theme_DATA = index.theme

EXTRA_DIST = $(theme_DATA)

SUBDIRS =		\
	gtk-2.0		\
	gtk-3.0		\
	metacity-1	\
	Docs		\
	openbox-3	\
	unity		\
	xfwm4

DIST_SUBDIRS =		\
	gtk-2.0		\
	gtk-3.0		\
	metacity-1	\
	Docs		\
	openbox-3	\
	unity		\
	xfwm4

CLEANFILES = index.theme

