THEME_NAME=Zukitwo-Dust
 
themedir = $(datadir)/themes/$(THEME_NAME)

theme_DATA = \
	index.theme

EXTRA_DIST = $(theme_DATA)

SUBDIRS =		\
	gtk-2.0		\
	gtk-3.0		\
	metacity-1  \
	cinnamon	\
	gnome-shell \
	unity		\
	xfwm4

DIST_SUBDIRS =	\
	gtk-2.0		\
	gtk-3.0		\
	metacity-1  \
	cinnamon	\
	gnome-shell \
	unity		\
	xfwm4

CLEANFILES = index.theme

