THEME_NAME=Zukitwo-Human
 
themedir = $(datadir)/themes/$(THEME_NAME)

theme_DATA = \
	index.theme

EXTRA_DIST = $(theme_DATA)

SUBDIRS =		\
	gtk-2.0		\
	gtk-3.0		\
	cinnamon	\
	gnome-shell	\
	unity

DIST_SUBDIRS =		\
	gtk-2.0		\
	gtk-3.0	\
	cinnamon	\
	gnome-shell	\
	unity

CLEANFILES = index.theme
