THEME_NAME=Zukitwo
 
themedir = $(datadir)/themes/$(THEME_NAME)

theme_DATA = \
	COPYING \
	index.theme \
	README

EXTRA_DIST = $(theme_DATA)

SUBDIRS =		\
	gtk-2.0		\
	gtk-3.0		\
	metacity-1 \
	gnome-shell \
	unity	\
	xfwm4

DIST_SUBDIRS =		\
	gtk-2.0		\
	gtk-3.0		\
	metacity-1 \
	gnome-shell \
	unity	\
	xfwm4

CLEANFILES = index.theme
