THEME_NAME=clearlooks-phenix
 
themedir = $(datadir)/themes/$(THEME_NAME)

theme_DATA = index.theme

EXTRA_DIST = $(theme_DATA)

SUBDIRS =		\
	doc			\
	gtk-2.0		\
	gtk-3.0		\
	metacity-1	\
	openbox-3	\
	wallpapers	\
	xfwm4

DIST_SUBDIRS =	\
	doc			\
	gtk-2.0		\
	gtk-3.0		\
	metacity-1	\
	openbox-3	\
	wallpapers	\
	xfwm4

CLEANFILES = index.theme
