THEME_NAME=ANewStartBlood

themedir = $(datadir)/themes/$(THEME_NAME)/gtk-2.0

theme_DATA = gtkrc


EXTRA_DIST = $(theme_DATA)

SUBDIRS = Handles \
			Icons \
			Menu \
			nautilus \
			Others \
			Panel \
			Tabs \
			caja

DIST_SUBDIRS = Handles \
			Icons \
			Menu \
			nautilus \
			Others \
			Panel \
			Tabs \
			caja
