THEME_NAME=ANewStartBlood

themedir = $(datadir)/themes/$(THEME_NAME)/metacity-1

theme_DATA = \
	metacity-theme-1.xml \
	close.png \
	close_prelight.png \
	close_pressed.png \
	close_unfocused.png \
	maximize.png \
	maximize_prelight.png \
	maximize_pressed.png \
	maximize_unfocused.png \
	minimize.png \
	minimize_prelight.png \
	minimize_pressed.png \
	minimize_unfocused.png

EXTRA_DIST = $(theme_DATA)
