THEME_NAME=Adwaita-Cupertino-SL

themedir = $(datadir)/themes/$(THEME_NAME)/gtk-3.0

theme_DATA = \
	cluebar.css \
	gnome-applications-gray.css \
	gnome-applications-gray-light.css \
	gnome-applications-light.css \
	gnome-mdi.css \
	gnome-mdi-2.css \
	gnome-panel.css \
	gtk.css \
	gtk-widgets-assets.css \
	gtk-widgets.css \
	scrollbar.css \
	settings.ini \
	sidebar.css \
	tabs-classic.css \
	tabs.css \
	unity.css \
	unity-darkest.css \
	unity-transparent.css \
	unity-white.css


EXTRA_DIST = $(theme_DATA)

SUBDIRS = assets

DIST_SUBDIRS = assets
