THEME_NAME=Adwaita-Cupertino-SL

themedir = $(datadir)/themes/$(THEME_NAME)/metacity-1

theme_DATA = \
	DWMWindow_CloseButton.Active_DisabledImage.png \
	DWMWindow_CloseButton.Active_HotImage.png \
	DWMWindow_CloseButton.Active_NormalImage.png \
	DWMWindow_CloseButton.Active_PressedImage.png \
	DWMWindow_MinimizeButton.Active_HotImage.png \
	DWMWindow_MinimizeButton.Active_NormalImage.png \
	DWMWindow_MinimizeButton.Active_PressedImage.png \
	DWMWindow_RestoreButton.Active_HotImage.png \
	DWMWindow_RestoreButton.Active_NormalImage.png \
	DWMWindow_RestoreButton.Active_PressedImage.png \
	menu-focus-none.svg \
	menu-focus-normal.svg \
	menu-focus.svg \
	menu-pressed.svg \
	metacity-theme-1.xml \
	metacity-theme-3.xml


EXTRA_DIST = $(theme_DATA)
