THEME_NAME=Ambiance-Xfce-LXDE-MATE/

themedir = $(datadir)/themes/$(THEME_NAME)/xfwm4

theme_DATA = \
	bottom-active.png \
	bottom-inactive.png \
	bottom-left-active.png \
	bottom-left-inactive.png \
	bottom-right-active.png \
	bottom-right-inactive.png \
	close-active.png \
	close-inactive.png \
	close-prelight.png \
	close-pressed.png \
	hide-active.png \
	hide-inactive.png \
	hide-prelight.png \
	hide-pressed.png \
	left-active.xpm \
	left-inactive.xpm \
	maximize-active.png \
	maximize-inactive.png \
	maximize-prelight.png \
	maximize-pressed.png \
	menu-active.png \
	menu-inactive.png \
	menu-pressed.png \
	right-active.xpm \
	right-inactive.xpm \
	themerc \
	title-1-active.png \
	title-1-inactive.png \
	title-2-active.png \
	title-2-inactive.png \
	title-3-active.png \
	title-3-inactive.png \
	title-4-active.png \
	title-4-inactive.png \
	title-5-active.png \
	title-5-inactive.png \
	top-left-active.xpm \
	top-left-inactive.xpm \
	top-right-active.xpm \
	top-right-inactive.xpm


EXTRA_DIST = $(theme_DATA)
