THEME_NAME=Cologne

themedir = $(datadir)/themes/$(THEME_NAME)/metacity-1

theme_DATA = \
	metacity-theme-1.xml \
	close.png \
	close_unfocused.png \
	maximize.png \
	maximize_unfocused.png \
	minimize.png \
	minimize_unfocused.png \
	prelight.png \
	prelight_unfocused.png \
	pressed.png

EXTRA_DIST = $(theme_DATA)
