THEME_NAME=DeLorean-Dark
 
themedir = $(datadir)/themes/$(THEME_NAME)/cinnamon

theme_DATA = \
	add-workspace-hover.png \
	add-workspace.png \
	border-popup-sub-menu.svg \
	button-active.svg \
	button-disabled.svg \
	button-focus-hover.svg \
	button-focus.svg \
	button-hover.svg \
	button.svg \
	calendar-arrow-left.svg \
	calendar-arrow-right.svg \
	checkbox-focused.svg \
	checkbox-off-focused.svg \
	checkbox-off.svg \
	checkbox.svg \
	cinnamon.css \
	close.svg \
	close-window.svg \
	corner-ripple-ltr.png \
	corner-ripple-rtl.png \
	filter-selected-ltr.svg \
	filter-selected-rtl.svg \
	hover-border.svg \
	menu.png \
	off-intl.png \
	off.png \
	on-intl.png \
	on.png \
	ORIGINAL-cinnamon.css \
	overview-hover.png \
	overview.png \
	panel-button-border.svg \
	panel.png \
	player-paused.svg \
	player-playing.svg \
	player-stopped.svg \
	process-working.svg \
	radiobutton-off.svg \
	radiobutton.svg \
	scroll-hhandle.svg \
	scroll-vhandle.svg \
	thumbnail.png \
	trash-icon.png \
	ws-switch-arrow-down.svg \
	ws-switch-arrow-up.svg

EXTRA_DIST = $(theme_DATA)
